# air_report_web_backend

./: .env.example  .gitignore  .replit  .version  0_test_ocr_replit.py  README.md  dump.rdb  main.py  manage.py  pyproject.toml  replit.nix
apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_add_background_image_fields.py
apps/ai_config/: admin.py  apps.py  factory.py  logging_config.py  models.py  monitoring.py  ocr_adapter.py  serializers.py  services.py  urls.py  views.py
apps/ai_config/migrations/: 0001_initial.py
apps/batch/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/batch/migrations/: 0001_initial.py  0002_alter_batchjob_status.py
apps/core/: apps.py  models.py  services.py  tests.py  views.py
apps/core/management/commands/: setup_project.py
apps/files/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/files/migrations/: 0001_initial.py  0002_remove_hash_md5_unique.py
apps/monthly/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/monthly/migrations/: 0001_initial.py  0002_alter_monthlyreport_csv_file.py
apps/ocr/: admin.py  apps.py  data_sync_service.py  models.py  point_learning_service.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/ocr/migrations/: 0001_initial.py  0002_pointvalue_pointlearning.py  0003_alter_contactinfo_match_source_processinglog_and_more.py  0004_drop_old_tables_create_csv.py  0005_refactor_csvrecord_to_json.py
apps/orders/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/reports/: admin.py  apps.py  models.py  monthly_service.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/reports/migrations/: 0001_initial.py  0002_change_delete_docx_default.py
apps/wechat_csv/: admin.py  apps.py  authentication.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/wechat_csv/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  celery.py  routing.py  urls.py  urls_minimal.py  ws_auth.py
config/settings/: base.py  development.py  minimal.py  production.py  replit.py  test.py
data/: point_memory.json
docs/: order_export_api.md
scripts/: build_replit.sh  clear_cache.sh  debug_nix_deps.sh  fix_unoconv_distutils.sh  install_fonts_replit.sh  install_fonts_replit_fixed.sh  install_libreoffice_replit.sh  install_pdf_dependencies.sh  run_replit.sh  setup_replit.sh  start_deployment.sh  start_redis.sh  start_replit.sh
templates/reports/: 模板.docx
test_data/: 5月人工.txt  6月.csv  log.json  log.txt
tests/: factories.py
